add sale html css and js

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="/src/styles/vars.css" />
 
+    <!-- Icons -->
+    <script src="https://kit.fontawesome.com/c45cb14264.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -58,9 +60,13 @@
 
             <li class="options__item"><a href="#" class="options__link">Favoritos</a></li>
             <li class="options__item"><a href="#" class="options__link">Minha estante</a></li>
+            <li class="options__item"><a href="/sale.html" class="options__link">Ofertas</a></li>
         </ul>
 
         <div class="header__divs">
+            <a href="/sale.html">
+                <i alt="Ofertas" class="fa-solid fa-fire icons_container"></i>
+            </a>
             <a href="#">
                 <img src="/src/assets/Favoritos.svg" alt="Meus favoritos" class="icons_container heart-icon">
             </a>
